--- a/primeiro-projeto/src/app/app.component.html
+++ b/primeiro-projeto/src/app/app.component.html
@@ -344,7 +344,10 @@
     <span>{{ title }} app is running!</span>
     
     <meu-primeiro-component></meu-primeiro-component>
+
     <app-meu-primeiro2></app-meu-primeiro2>
+    
+    <app-cursos></app-cursos>
 
 
     <svg id="rocket-smoke" xmlns="http://www.w3.org/2000/svg" width="516.119" height="1083.632" viewBox="0 0 516.119 1083.632">
